- Fixed a row-distortion that appeared when: 1. zooming out. 2. reload. 3. zooming in.
- TODO:
1. Initializing the gird with fixed dimensions perhaps using client-screen
dimensions.
2. Setting the min-width of the div-board when creating the grid.

--- a/css/global.css
+++ b/css/global.css
@@ -21,7 +21,6 @@ div {
 .div-frame {
 	padding: 1px 1px 1px 1px;
 
-	width: 80%;
 	min-width: 980px;
 
 	margin-left: auto;
@@ -31,17 +30,16 @@ div {
 	/* border is only enabled for testing purposes.*/
 	/* avoid sub-pixle calculations
 	 * by setting border width to 3px.*/
-	/* border: 3px dotted red; */
+	border: 1px dotted red;
 }
 
 #menu-frame {
-	min-height: 61px;
+	min-height: 60px;
 	text-align: center;
 }
 
 #board-frame {
-	height: 80%;
-	min-height: 490px;
+	min-height: 480px;
 	margin-bottom: 5px;
 }
 
